# Butran

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pre_commit.yml  pull_request.yml  tests.yml
scripts/: download_BEIR.py  test_benchmark_on_BEIR.py  translate_BeIR.py
src/: data_io.py  translate.py  views.py
src/core/: exceptions.py
tests/: test_data_io.py  test_translate.py
tests/resources/: example_text.py  jsonl_test_data.jsonl  jsonl_test_data_invalid.jsonl
