[tool.poetry]
name = "butran"
version = "0.1.0"
description = "Bulk translator catered to translating machine learning benchmark sets."
authors = ["Marten Koopmans <36400337+Mkoopm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.poetry.dependencies]
python = "~3.11.7"
sentencepiece = "^0.1.99"
transformers = "^4.34.1"
torch = "^2.1.2"
sacremoses = "^0.1.1"
beir = "^2.0.0"
tqdm = "^4.66.1"
argh = "^0.31.1"


[tool.mypy]
ignore_missing_imports = "True"
strict_optional = "True"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
